# NewsFetch

./: .gitignore  Dockerfile-commoncrawl  Dockerfile-enrichers  Dockerfile-sampleapi  LICENSE  README.md
.github/workflows/: main.yml  newsfetch-api-ci.yml  newsfetch-core-ci.yml
newsfetch-api/: .env.sample  README.md  config.py  fastapi_main.py  ingest_data.py  newsfetch.db  pyproject.toml  render_build.sh
newsfetch-api/core/: api_schemas.py  crud.py  database.py  db_models.py
newsfetch-api/tests/: newsfetch.db  processed_warc_news_sample_article.json  test_api.py
newsfetch-common-crawl/: .env.sample  README.md  config.py  extract_warc.sh  get_latest_warc.sh  process_extracted_warc_files.sh  pyproject.toml
newsfetch-common-crawl/newsfetch_common_crawl/: get_latest_warc.py  warc_extracted_files_processor.py  warc_extractor.py
newsfetch-core/: pyproject.toml
newsfetch-core/newsfetch_core/: api_schemas.py  newplease_adapter.py
newsfetch-core/newsfetch_core/common/: constants.py  util.py
newsfetch-core/newsfetch_core/tests/: test_api_schemas.py  test_newsplease_adapter.py
newsfetch-enrichers/: README.md  config.py  pyproject.toml  requirements-allennlp.txt  requirements-test.txt  requirements.txt  run_enrichers.py
newsfetch-enrichers/common/: datatypes.py  util.py
newsfetch-enrichers/newsfetch_enrichers/: allenai_enricher.py  docttttt_enricher.py  enricher.py  enricher_model_factory.py  entity_composer.py  flair_enricher.py  huggingface_enricher.py  huggingface_ner_enricher.py  huggingface_summarization_enricher.py  huggingface_zeroshot_classification_enricher.py  keyword_extraction_enricher.py  named_entities_aggregator.py  spacy_enricher.py  spacy_language_detection_enricher.py  spacy_ner_enricher.py  topic_modeling_enricher.py  transformers_enricher.py  transformers_ner_enricher.py  transformers_qna_enricher.py  transformers_summarization_enricher.py  transformers_zeroshot_classification_enricher.py
newsfetch-enrichers/tests/newsfetch_enrichers/: test_entity_composer.py  test_multi_model_named_entities_aggregator.py  test_single_model_named_entities_aggregator.py
newsfetch-examples/: README.md  config.py  opensearch_client.py  requirements.txt  utils.py
newsfetch-examples/opensearch-news-search/: README.md  config.py  indexer.py  opensearch_client.py
newsfetch-examples/opensearch-news-search/news-search-ui/: package-lock.json  package.json
newsfetch-examples/opensearch-news-search/news-search-ui/src/: App.js
newsfetch-examples/opensearch-news-vector-search/: indexer.py  searcher.py
newsfetch-newsplease/: pyproject.toml
newsfetch-newsplease/newsfetch_newsplease/tests/: test_newsplease_adapter.py  warc_extract.json
sample-data/CC-NEWS-20220915230049-00936/processed-content/1prime.ru/: 300cc0ac-3194-40a5-aec0-96193bc3cf16.json  4995f255-d12f-4864-8177-4900acb18754.json  958c5a13-987c-496e-ba46-8a4b170b2afc.json
sample-data/CC-NEWS-20220915230049-00936/processed-content/abc7.com/: 8b735af8-78e9-40f4-a93d-769c2c2b196b.json
sample-data/CC-NEWS-20220915230049-00936/processed-content/agenciabrasil.ebc.com.br/: 01239851-4654-4553-810c-0b9c900b5e95.json  09458736-57b2-4442-884e-069b54a0550d.json  1a33a070-f078-4dd3-9175-34045c3813b6.json  8e6fc4e4-ab31-45b3-83da-cc52693390b2.json
sample-data/CC-NEWS-20220915230049-00936/processed-content/andaluciainformacion.es/: 72bf883b-de73-4c44-8a74-c6ff7f05d782.json
sample-data/CC-NEWS-20220915230049-00936/processed-content/chicago.suntimes.com/: 2a4cdfe7-e7bd-4917-a7e5-4830c78cfae5.json  3bdc3f01-a4d3-483d-8e26-53837acc68bb.json  c17e5731-92db-4bb5-a8aa-c96da2013789.json  e1dfbd00-92e4-45e8-bcb5-fae7cd218641.json  f63bcd1e-9fb4-4ad3-9092-18ce04dca174.json
sample-data/CC-NEWS-20220915230049-00936/warc-extract/1prime.ru/: 300cc0ac-3194-40a5-aec0-96193bc3cf16.json  4995f255-d12f-4864-8177-4900acb18754.json  958c5a13-987c-496e-ba46-8a4b170b2afc.json
sample-data/CC-NEWS-20220915230049-00936/warc-extract/abc7.com/: 47532523-6026-4e53-b8d3-a195ac7af1ce.json  8b735af8-78e9-40f4-a93d-769c2c2b196b.json
sample-data/CC-NEWS-20220915230049-00936/warc-extract/agenciabrasil.ebc.com.br/: 01239851-4654-4553-810c-0b9c900b5e95.json  09458736-57b2-4442-884e-069b54a0550d.json  1a33a070-f078-4dd3-9175-34045c3813b6.json  8e6fc4e4-ab31-45b3-83da-cc52693390b2.json
sample-data/CC-NEWS-20220915230049-00936/warc-extract/andaluciainformacion.es/: 72bf883b-de73-4c44-8a74-c6ff7f05d782.json
(+105 files in other folders)
