[tool.poetry]
name = "newsfetch-common-crawl"
version = "0.1.0"
description = "Newsfetch CommonCrawl library"
authors = ["Manoj Bharadwaj <manoj@cloudcosmos.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
python_dotenv = "^0.20.0"
warcio="^1.7.4"
# relative path based dependencies
pydantic = "^1.10.2"
newsfetch-core = {path = "../newsfetch-core"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "./venv"


