[tool.poetry]
name = "newsfetch-core"
version = "0.1.0"
description = "NewsFetch core library"
authors = ["Manoj Bharadwaj <manoj@cloudcosmos.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
python_dotenv = "^0.20.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "./venv"


