[tool.poetry]
name = "newsfetch-enrichers"
version = "0.1.0"
description = "Newsfetch Enrichments library"
authors = ["Manoj Bharadwaj <manoj@cloudcosmos.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
python_dotenv = "^0.20.0"
# relative path based dependencies
#pydantic = "^1.10.2"
newsfetch-core = {path = "../newsfetch-core"}

#huggingface
torch="^1.10.1"
transformers="^4.21.1"

#spacy
spacy="^3.4"

#allennlp (see README for m1 notes)
#allennlp="^2.10.0"
#allennlp-models="^2.10.0"

#flair
#flair="^0.11"

#keybert
keybert="^0.5.0"

gtts="^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "./venv"


